# gurita

./: LICENSE  README.md  pyproject.toml  setup.py
data/: README.md  tips.csv
docs/: aesthetics.html  aesthetics.rst  bar.html  bar.rst  box.html  box.rst  boxen.html  boxen.rst  bug_reports.html  clustermap.html  clustermap.rst  command_line_syntax.html  command_line_syntax.rst  conf.py  contributing.html  corr.html  correlation.html  correlation.rst  count.html  count.rst  cut.html  describe.html  docker.html  docker.rst  dropna.html  eval.html  eval.rst  example_input_data.html  example_input_data.rst  facets.html  facets.rst  feature_requests.html  features.html  features.rst  filter.html  filter.rst  general_behaviour.rst  genindex.html  gmm.html  groupby.html  (+67 more)
docsrc/: Makefile  aesthetics.rst  bar.rst  box.rst  boxen.rst  bug_reports.rst  clustermap.rst  command_line_syntax.rst  conf.py  contributing.rst  corr.rst  count.rst  cut.rst  describe.rst  docker.rst  dropna.rst  eval.rst  example_input_data.rst  facets.rst  feature_requests.rst  filter.rst  gmm.rst  groupby.rst  head.rst  heatmap.rst  hist.rst  histogram.rst  in.rst  index.rst  input_output.rst  installation.rst  kmeans.rst  license.rst  line.rst  list_of_commands.rst  lmplot.rst  make_examples.sh  melt.rst  missing.rst  normal_test.rst  (+27 more)
gurita/: args.py  cluster.py  command_base.py  constants.py  gurita.py  hatch.py  info.py  io.py  io_arguments.py  pca.py  plot.py  plot_arguments.py  render_plot.py  stats.py  transform.py  utils.py
hatch/: args.py  bar_plot.py  box_plot.py  boxen_plot.py  cluster.py  (+34 more)
(+69 files in other folders)
